# kb-claude

./: .gitignore  AGENTS.md  CLAUDE.MD  CLAUDE.md  Cargo.toml  PLAN.md  PRD.md  README.md  smells.md
.claude/: manifest.md
.claude/cheatsheets/: cli-command-cheatsheet.md  tidy-first-quick-reference.md
.claude/code_index/: cli-module-index.md
.claude/debug_history/: first-run-initialization.md
.claude/memory_anchors/: dogfooding-anchor.md
.claude/metadata/: claude-md-added-as-main-project-guidelines.md  dogfooding-knowledge-base.md  prompt-directory.md  release-0-1-1-prep.md  release-0-2-0-prep.md  release-0-3-0-prep.md  release-v0-3-3.md  release-verification-note.md  validation-whitelist-architecture.md
.claude/other/: ignored-note.md
.claude/patterns/: dogfooding-cli-workflow.md
.claude/plans/: tidy-first-cleanup-strategy.md
.claude/qa/: how-to-search-the-kb.md
docs/: RELEASE.md  smells.md
docs/prompt/: drive.md
memory-bank/execute/: 2025-12-03_12-30-00_cli-output-standardization.md
memory-bank/plan/: 2025-12-03_12-15-00_cli-output-standardization.md
memory-bank/research/: 2025-12-03_12-09-03_cli-output-standardization.md
new-docs/: MAP.md
new-docs/architecture/: ANALYSIS-SUMMARY.md  README.md  data-flow.md  dependencies.md  design-decisions.md  module-structure.md  overview.md
new-docs/entry/: ARCHITECTURE.md  INDEX.md  binary-entry-point.md  cli-module-entry.md  cli-subcommands.md  data-model-api.md  filesystem-module-api.md  library-public-api.md
new-docs/modules/: SUMMARY.md  cli-init.md  cli-link.md  cli-manifest.md  cli-mod.md  cli-new.md  cli-search.md  cli-validate.md  fs.md  lib.md  main.md  model.md
new-docs/state/: README.md  caching-mechanisms.md  data-persistence-patterns.md  global-state-stores.md  struct-based-state-containers.md
new-docs/structure/: claude-directory.md  cli-subdirectory.md  memory-bank-directory.md  new-docs-directory.md  overview.md  root-directory.md  src-directory.md  tests-directory.md
prompts/: how-to-drive-claude-kb-cli.md
src/: fs.rs  lib.rs  main.rs  model.rs
src/agent/: protocol.rs
src/cli/: init.rs  link.rs  (+5 more)
tests/: command_matrix.rs  integration_tests.rs  smoke.rs
(+22 files in other folders)
