[package]
name = "claude-kb-cli"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for managing knowledge bases with Claude"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
walkdir = "2.5"
colored = "2.1"
glob = "0.3"

[dev-dependencies]
tempfile = "3.13"
serial_test = "3.2"

[lib]
name = "claude_kb_cli"
path = "src/lib.rs"

[[bin]]
name = "claude-kb"
path = "src/main.rs"
