[package]
name = "claude-kb-cli"
version = "0.3.0"
edition = "2021"
description = "CLI for generating, validating, and searching Markdown knowledge bases under a .claude/ hierarchy."
license = "MIT"
repository = "https://github.com/alchemiststudiosDOTai/kb-claude"
homepage = "https://github.com/alchemiststudiosDOTai/kb-claude"
documentation = "https://github.com/alchemiststudiosDOTai/kb-claude#readme"
readme = "README.md"
keywords = ["knowledge-base", "markdown", "cli", "productivity", "automation"]
categories = ["command-line-utilities", "text-processing", "filesystem"]
exclude = [".claude/*", ".claude/**/*"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[[bin]]
name = "kb-claude"
path = "src/main.rs"
